WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
12516
REGRESSION (
r19313
): All keyboard navigation has stopped working
https://bugs.webkit.org/show_bug.cgi?id=12516
Summary
REGRESSION (r19313): All keyboard navigation has stopped working
David Kilzer (:ddkilzer)
Reported
2007-01-31 15:24:22 PST
All keyboard navigation appears to have stopped working. For example: - Using arrow keys to scroll up/down and left/right on the page. - Using Cmd-Left to go back in history, or Cmd-Right to go forward in history. I'm pretty sure this is a regression from
r19313
.
Attachments
patch
(4.18 KB, patch)
2007-01-31 16:17 PST
,
Adele Peterson
aroben
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
David Kilzer (:ddkilzer)
Comment 1
2007-01-31 15:27:04 PST
Summary: Keyboard navigation in Safari/WebKit has stopped working. Steps to reproduce: 1. Open Safari/WebKit. 2. Open a page that scrolls vertically and horizontally. 3. Use arrow keys to scroll page vertically and horizontally after it has loaded. Expected results: Arrow keys will scroll page in the appropriate direction. Actual results: Arrow keys do nothing; it appears that keyboard events at the browser level are completely ignored. Regression: Tested with a locally-built debug build of WebKit
r19315
with Safari 2.0.4 (419.3) on Mac OS X 10.4.8 (8N1037). This is a regression from shipping Safari 2.0.4 (419.3) on Mac OS X 10.4.8 (8N1037).
Adele Peterson
Comment 2
2007-01-31 15:32:14 PST
Ack. I'm sure I caused this. Looking into this.
David Kilzer (:ddkilzer)
Comment 3
2007-01-31 15:40:21 PST
Confirmed regression occurred in
r19313
.
Adele Peterson
Comment 4
2007-01-31 15:54:27 PST
I have a fix for this. I moved the check for _canEdit into WebCore (Editor::insertText), and of course, this means that check is never run for other commands.
Adele Peterson
Comment 5
2007-01-31 16:17:06 PST
Created
attachment 12837
[details]
patch Note- In my last change, I added this isContentEditable check to insertText. This patch doesn't take that check out. In the future, I want to make execCommand call Editor::insertText, so that check will still be useful.
Adam Roben (:aroben)
Comment 6
2007-01-31 17:55:25 PST
Comment on
attachment 12837
[details]
patch r=me
Adele Peterson
Comment 7
2007-01-31 18:04:37 PST
Committed revision 19319.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug